[package]
name = "doodoo"
version = "0.1.1"
rust-version = "1.86"
edition = "2024"
description = "todo cli"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nathenjacobe/doodoo"
repository = "https://github.com/nathenjacobe/doodoo"

[dependencies]
crossterm = "0.27.0"
home = "=0.5.11"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"